shrub density calculation

--- a/ch1_all_nmds.Rmd
+++ b/ch1_all_nmds.Rmd
@@ -89,6 +89,11 @@ density_byspecies <- density_raw %>%
    dplyr::summarize(mean_density_100m2 = mean(density_100m2)) %>% 
   rename(species = species_lifestage_datatype)
 
+densitycountbytransect <- density_raw %>%   
+  group_by(site, rep, site_rep, species, status) %>% 
+  dplyr::summarize(density_80m2 = sum(count)) 
+  
+
 sort(unique(germination_raw$species_diversity))
 germination_byspecies <- germination_raw %>%
   group_by(site, species_diversity) %>%
